@@ -10,6 +10,8 @@ import re
 from mako import parsetree, exceptions
 from mako.pygen import adjust_whitespace
 
+_regexp_cache = {}
+
 class Lexer(object):
     def __init__(self, text, filename=None, input_encoding=None, preprocessor=None):
         self.text = text
@@ -34,10 +36,15 @@ class Lexer(object):
         
         if a match occurs, update the current text and line position."""
         mp = self.match_position
-        if flags:
-            reg = re.compile(regexp, flags)
-        else:
-            reg = re.compile(regexp)
+        try:
+            reg = _regexp_cache[(regexp, flags)]
+        except KeyError:
+            if flags:
+                reg = re.compile(regexp, flags)
+            else:
+                reg = re.compile(regexp)
+            _regexp_cache[(regexp, flags)] = reg
+
         match = reg.match(self.text, self.match_position)
         if match:
             (start, end) = match.span()
@@ -48,7 +55,7 @@ class Lexer(object):
             self.matched_lineno = self.lineno
             lines = re.findall(r"\n", self.text[mp:self.match_position])
             cp = mp - 1
-            while (cp >= 0 and cp<len(self.text) and self.text[cp] != '\n'):
+            while (cp >= 0 and cp<self.textlength and self.text[cp] != '\n'):
                 cp -=1
             self.matched_charpos = mp - cp
             self.lineno += len(lines)
@@ -121,10 +128,10 @@ class Lexer(object):
                 except UnicodeDecodeError, e:
                     raise exceptions.CompileException("Could not read template using encoding of 'ascii'.  Did you forget a magic encoding comment?", 0, 0, self.filename)
 
-        length = len(self.text)
+        self.textlength = len(self.text)
             
         while (True):
-            if self.match_position > length: 
+            if self.match_position > self.textlength: 
                 break
         
             if self.match_end():
@@ -144,9 +151,9 @@ class Lexer(object):
             if self.match_text(): 
                 continue
             
-            if (self.current.match_position > len(self.current.source)):
+            if self.match_position > self.textlength: 
                 break
-            raise "assertion failed"
+            raise exceptions.CompileException("assertion failed")
             
         if len(self.tag):
             raise exceptions.SyntaxException("Unclosed tag: <%%%s>" % self.tag[-1].keyword, self.matched_lineno, self.matched_charpos, self.filename)
@@ -305,5 +312,3 @@ class Lexer(object):
         else:
             return False
              
-    def _count_lines(self, text):
-        return len(re.findall(r"\n", text)) 
